<resources>

    <string name="facebook_app_id" translatable="false">210389653423389</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb210389653423389</string>

    <!-- KEY HELPER -->
    <string name="user_email_key" translatable="false">USER_EMAIL</string>
    <string name="user_password_key" translatable="false">USER_PASSWORD</string>


    <string name="app_name">Nullidea</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">log in</string>
    <string name="lamp">lamp</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="dont_have_account">Don`t have account ?</string>
    <string name="log_in_via_facebook">log_in_via_facebook</string>
    <string name="log_in_via_google">log in via google</string>
    <string name="log_in_via_github">log in via github</string>
    <string name="debug">debug</string>
    <string name="wrong_password">Wrong  password</string>
    <string name="lost_connection">lost connection</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in">sign in</string>
    <string name="user_exis">User exis</string>
    <string name="verify">VERIFY</string>
    <string name="enter_the_6_digit_code_we_sent_you_via_email_to_proceed_check_your_spam_folder_as_well_usually_email_comes_in_2_10_min">Enter the 6 digit code we sent you\nvia email to proceed\nCheck your <font color="#ffcb32">Spam</font> folder as well,\nUsually email comes in 2–10 min</string>
    <string name="Didnt_receive_any_code">Didn\'t receive any code ?</string>
    <string name="resend">RESEND</string>
    <string name="_120">120</string>
    <string name="wrong_code">Wrong code</string>
    <string name="proceed">proceed</string>
    <string name="next">Next</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="email_not_exits">Email is not exits</string>
</resources>
