<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.sign_in.SignInFragment">

    <ImageView
        android:layout_width="82dp"
        android:layout_height="165dp"
        android:contentDescription="@string/lamp"
        android:scaleType="fitStart"
        android:src="@drawable/img_lamp_top_right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="82dp"
        android:layout_height="165dp"
        android:contentDescription="@string/lamp"
        android:scaleType="fitEnd"
        android:src="@drawable/img_lamp_bottom_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_border_margin"
        android:layout_marginEnd="@dimen/big_border_margin"
        android:layout_marginBottom="64dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TitleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center" />

        <View
            style="@style/DividerStyle"
            android:layout_width="match_parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signin_email_txtinputlayout"
            style="@style/ProfileField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/middle_field_margin"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_person_friar_gray_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signin_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoText="false"
                android:gravity="center_vertical"
                android:textColor="@color/field_state" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signin_password_txtinputlayout"
            style="@style/ProfileField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/middle_field_margin"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/friar_gray"
            app:startIconDrawable="@drawable/ic_lock_friar_gray_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/field_state" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/medium_btn_height"
            android:layout_gravity="end"
            android:backgroundTint="@android:color/transparent"
            android:elevation="0dp"
            android:enabled="true"
            android:fontFamily="@font/ubuntu_light"
            android:gravity="center"
            android:insetRight="-15dp"
            android:shadowDy="0"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:cornerRadius="5dp"
            app:elevation="12dp"
            app:rippleColor="@color/colorPrimaryDark" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginStart="@dimen/border_margin"
            android:layout_marginEnd="@dimen/border_margin"
            android:backgroundTint="@color/colorPrimary"
            android:elevation="12dp"
            android:enabled="true"
            android:fontFamily="@font/ubuntu_medium"
            android:gravity="center"
            android:shadowColor="@color/colorPrimary"
            android:shadowDy="8"
            android:text="@string/log_in"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:cornerRadius="5dp"
            app:elevation="12dp"
            app:rippleColor="@color/colorPrimaryDark" />

        <View
            style="@style/DividerStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/middle_field_margin"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/dont_have_account"
                android:textColor="@color/silver"
                android:textSize="12sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/medium_btn_height"
                android:backgroundTint="@android:color/transparent"
                android:elevation="0dp"
                android:enabled="true"
                android:fontFamily="@font/ubuntu_medium"
                android:gravity="center"
                android:insetLeft="-10dp"
                android:insetTop="4dp"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                app:rippleColor="@color/colorPrimaryDark" />
        </LinearLayout>

        <View
            style="@style/DividerStyle"
            android:layout_width="match_parent"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/middle_field_margin"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/log_in_via_facebook"
                android:src="@drawable/ic_ripple_fb" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="@dimen/middle_border_margin"
                android:layout_marginEnd="@dimen/middle_border_margin"
                android:contentDescription="@string/log_in_via_google"
                android:src="@drawable/ic_ripple_google" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/log_in_via_github"
                android:src="@drawable/ic_ripple_github" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>